--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "djangorestframework (>=3.16.0,<4.0.0)",
     "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
+    "drf-nested-routers (>=0.94.2,<0.95.0)",
 ]
 
 
